--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <nav class="nav-container">
                 <div class="container-menu L">
                     <ul>
-                        <li><a href=""><img src="img/logo-small.png" alt=""></a></li>
+                        <li><a class="Logo" href=""><img src="img/logo-small.png" alt=""></a></li>
                         <li><a href="#">Perchè Dropbox?</a></li>
                         <li><a href="#">Funzioni</a></li>
                         <li><a href="#">Piani e prezzi</a></li>
@@ -28,18 +28,26 @@
                         <li><a href="#">Supporto</a></li>
                         <li><a href="#"></a>Contatta l'ufficio vendite</li>
                         <li><a href="#"></a>Accedi</li>
-                        <li><a class="" href="">Inizia</a></li>
+                        <li><a class="Botton Right" href="">Inizia</a></li>
                     </ul>
                 </div>
-                
-
             </nav>
         </div>
     </header>
 
     <section class="container-img-top">
-        <div class="container-top">
+        <div class="container-top-center">
+            <div class="container-testo">
+                <h1><strong>Tutto cio che ti serve per il lavoro, in un unico posto</strong></h1>
+            </div>
 
+            <div class="container-testo-top-laterale">
+                <p><strong>Finalmente tutti i tuoi strumenti, contenuti e <br> collaboratori sono accessibili dallo stesso posto. <br> Dropbox Business è più di uno spazio di <br> archiviazione sicuro: è un modo intelligente e <br> integrato per ottimizzare il flusso di lavoro esistente.</strong></p>
+            </div>
+
+            <div class="Botton center">
+                <a href="#">Inizia la tua prova gratuita</a>
+            </div>
         </div>
     </section>
     
