--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+    <!-- Menu con pulsante e logo -->
     <header class="container-header">
 
         <div class="container1° clearfix">
@@ -35,18 +36,31 @@
         </div>
     </header>
 
+<!-- h1 con testo laterale e immagine sulla sinistra -->
+
     <section class="container-img-top">
         <div class="container-top-center">
             <div class="container-testo">
                 <h1><strong>Tutto cio che ti serve per il lavoro, in un unico posto</strong></h1>
             </div>
 
-            <div class="container-testo-top-laterale">
-                <p><strong>Finalmente tutti i tuoi strumenti, contenuti e <br> collaboratori sono accessibili dallo stesso posto. <br> Dropbox Business è più di uno spazio di <br> archiviazione sicuro: è un modo intelligente e <br> integrato per ottimizzare il flusso di lavoro esistente.</strong></p>
-            </div>
-
-            <div class="Botton center">
-                <a href="#">Inizia la tua prova gratuita</a>
+            <div class="container-generale-text-img clearfix">
+                <div class="container-testo-top-laterale">
+                    <p><strong>Finalmente tutti i tuoi strumenti, contenuti e <br> collaboratori sono accessibili dallo stesso posto. <br> Dropbox Business è più di uno spazio di <br> archiviazione sicuro: è un modo intelligente e <br> integrato per ottimizzare il flusso di lavoro esistente.</strong></p>
+                </div>
+    
+                <div class="Botton center">
+                    <a href="#">Inizia la tua prova gratuita</a>
+                </div>
+                <div id="Annulla" >
+                    <p>Annulla in qualsiasi momento</p>
+                </div>
+    
+                <div class="container-img-right-out">
+                    <div>
+                        <img src="img/jumbo.png" alt="">
+                    </div>
+                </div>
             </div>
         </div>
     </section>
