Aggiunta pulsate e link

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Dropbox Brutto</title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEBFlcgUa6xLiPY/NS5R+E6ztJQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/all.min.css" integrity="sha512-YWzhKL2whUzgiheMoBFwW8CKV4qpHQAEuvilg9FAn5VJUDwKZZxkJNuGM4XkWuk94WCrrwslk8yWNGmY1EduTA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
     <!-- Menu con pulsante e logo -->
@@ -30,7 +31,7 @@
                         <li><a href="#">Supporto</a></li>
                         <li><a href="#"></a>Contatta l'ufficio vendite</li>
                         <li><a href="#"></a>Accedi</li>
-                        <li><a class="Botton Right" href="">Inizia</a></li>
+                        <li><a class="Button Right" href="">Inizia</a></li>
                     </ul>
                 </div>
             </nav>
@@ -50,7 +51,7 @@
                     <p><strong>Finalmente tutti i tuoi strumenti, contenuti e <br> collaboratori sono accessibili dallo stesso posto. <br> Dropbox Business è più di uno spazio di <br> archiviazione sicuro: è un modo intelligente e <br> integrato per ottimizzare il flusso di lavoro esistente.</strong></p>
                 </div>
     
-                <div class="Botton center">
+                <div class="Button center">
                     <a href="#">Inizia la tua prova gratuita</a>
                 </div>
                 <div id="Annulla" >
@@ -104,9 +105,32 @@
                     <div class="Mese">/mese</div>
 
                     <div class="options">
-                        <div class="utenti">
-                            <i class="far fa-user"></i>
+                        <div class="rates">
+
+                            <div class="user">
+                                <i class="far fa-user"></i>
+                                <span><strong>1 utente</strong></span>
+                            </div>
                             
+                            <div class="folder">
+                                <i class="far fa-folder"></i>
+                                <span><strong>3 TB di spazio di archiviazione sicuro</strong></span>
+                            </div>
+
+                            <div class="pencil">
+                                <i class="fa-solid fa-pencil"></i>
+                                <span><strong>Funzione di produttività preminum e condivisione file semplice e veloce</strong></span>
+                            </div>
+
+                            <div class="Button Offerte">
+                                <a href="#">Prova gratis per 30 giorni</a>
+                            </div>
+
+                            <div class="link-acquista">
+                                <span>oppure </span>
+                                <a href="#">acquista ora</a>
+                            </div>
+
                         </div>
                     </div>
                 </div>
