Aggiunta titolo Aziende

--- a/index.html
+++ b/index.html
@@ -343,35 +343,40 @@
                 <div class="container-6img">
                     <img src="img/business-feature-coordinate-it.png">
                     <h3>Passa di meno da uno strumento all'altro</h3>
-                    <p>Porta a termine le attivitàquotidiane con uno solo strumento. Crea, modifica e condividi contenuti cloud da Documenti, Fogli e Presentazioni di Google, file Microsoft Office e <span>DropBox Paper</span> direttamente da Dropbox.</p>
+                    <p>Porta a termine le attivitàquotidiane con uno solo strumento. Crea, modifica e condividi contenuti cloud da Documenti, Fogli e Presentazioni di Google, file Microsoft Office e DropBox Paper direttamente da Dropbox.</p>
                 </div>
 
                 <div class="container-6img">
                     <img src="img/business-feature-multi-device.png">
                     <h3>Passa di meno da uno strumento all'altro</h3>
-                    <p>Porta a termine le attivitàquotidiane con uno solo strumento. Crea, modifica e condividi contenuti cloud da Documenti, Fogli e Presentazioni di Google, file Microsoft Office e <span>DropBox Paper</span> direttamente da Dropbox.</p>
+                    <p>Porta a termine le attivitàquotidiane con uno solo strumento. Crea, modifica e condividi contenuti cloud da Documenti, Fogli e Presentazioni di Google, file Microsoft Office e DropBox Paper direttamente da Dropbox.</p>
                 </div>
 
                 <div class="container-6img">
                     <img src="img/business-feature-integrations-it.png">
                     <h3>Passa di meno da uno strumento all'altro</h3>
-                    <p>Porta a termine le attivitàquotidiane con uno solo strumento. Crea, modifica e condividi contenuti cloud da Documenti, Fogli e Presentazioni di Google, file Microsoft Office e <span>DropBox Paper</span> direttamente da Dropbox.</p>
+                    <p>Porta a termine le attivitàquotidiane con uno solo strumento. Crea, modifica e condividi contenuti cloud da Documenti, Fogli e Presentazioni di Google, file Microsoft Office e DropBox Paper direttamente da Dropbox.</p>
                 </div>
 
                 <div class="container-6img">
                     <img src="img/business-feature-send-files-it.png">
                     <h3>Passa di meno da uno strumento all'altro</h3>
-                    <p>Porta a termine le attivitàquotidiane con uno solo strumento. Crea, modifica e condividi contenuti cloud da Documenti, Fogli e Presentazioni di Google, file Microsoft Office e <span>DropBox Paper</span> direttamente da Dropbox.</p>
+                    <p>Porta a termine le attivitàquotidiane con uno solo strumento. Crea, modifica e condividi contenuti cloud da Documenti, Fogli e Presentazioni di Google, file Microsoft Office e DropBox Paper direttamente da Dropbox.</p>
                 </div>
 
                 <div class="container-6img">
                     <img src="img/business-feature-security.png">
                     <h3>Passa di meno da uno strumento all'altro</h3>
-                    <p>Porta a termine le attivitàquotidiane con uno solo strumento. Crea, modifica e condividi contenuti cloud da Documenti, Fogli e Presentazioni di Google, file Microsoft Office e <span>DropBox Paper</span> direttamente da Dropbox.</p>
+                    <p>Porta a termine le attivitàquotidiane con uno solo strumento. Crea, modifica e condividi contenuti cloud da Documenti, Fogli e Presentazioni di Google, file Microsoft Office e DropBox Paper direttamente da Dropbox.</p>
                 </div>
             </div>
 
+            <div class="titolo-aziende">
+                <h2>Più di 500 team <br>utilizzando Dropbox Business</h2>
+                <a href="#">Scopri di più sui nostri</a>
+            </div>
         </div>
+        
     </main>
     
 
