Quadrati Aziende Affiliate

--- a/index.html
+++ b/index.html
@@ -376,7 +376,23 @@
                 <a href="#">Scopri di più sui nostri</a>
             </div>
         </div>
-        
+        <div class="aziende-left">
+            <div class="square designit">
+                <img src="img/designit.svg">
+            </div>
+
+            <div class="square arizona">
+                <img src="img/arizona_state_university.svg">
+            </div>
+
+            <div class=" square florida">
+                <img src="img/university_of_florida.svg">   
+            </div>
+
+            <div class="square topps">
+                <img src="img/topps.svg">
+            </div>
+        </div>
     </main>
     
 
